# ejercicio-16/mcv/app/controllers/libro_controller.py
@@ -21,7 +21,8 @@ def get_libros():
 # Ruta para obtener un animal específico por su ID
 @libro_bp.route("/libros/<int:id>", methods=["GET"])
 @jwt_required
-def get_alibro(id):
+@roles_required(roles=["admin", "user"])
+def get_libro(id):
     libro = Libro.get_by_id(id)
     if libro:
         return jsonify(render_libro_detail(libro))
@@ -31,6 +32,7 @@ def get_alibro(id):
 # Ruta para crear un nuevo animal
 @libro_bp.route("/libros", methods=["POST"])
 @jwt_required
+@roles_required(roles=["admin"])
 def create_libro():
     data = request.json
     titulo = data.get("titulo")
@@ -52,6 +54,7 @@ def create_libro():
 # Ruta para actualizar un animal existente
 @libro_bp.route("/libros/<int:id>", methods=["PUT"])
 @jwt_required
+@roles_required(roles=["admin"])
 def update_libro(id):
     libro = Libro.get_by_id(id)
 
@@ -73,6 +76,7 @@ def update_libro(id):
 # Ruta para eliminar un animal existente
 @libro_bp.route("/libros/<int:id>", methods=["DELETE"])
 @jwt_required
+@roles_required(roles=["admin"])
 def delete_libro(id):
     libro= Libro.get_by_id(id)
 
